--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ wheels/
 
 # qi specific
 temp_generated/
-.qi-tracking.yaml
 playground/
+.*-tracking.yaml
 
 # oas generator
-openapi-generator-cli-6.6.0.jar
+openapi-generator-cli-*.jar
