--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,10 +45,10 @@ jobs:
         . .venv/bin/activate
         make lint
 
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
         . .venv/bin/activate
-        make test
+        make test.cov
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
@@ -64,7 +64,7 @@ jobs:
     needs: test
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.12"]
         java-version: ["17"]
 
     steps:
