feat(cli): add convert command to switch OpenAPI spec versions
Add a new command to the CLI for converting OpenAPI specifications
between versions 2 and 3. This feature allows users to specify the
target version and output file, enhancing flexibility in API
development workflows.

fix(generator): implement schema conversion between OpenAPI versions

Add functionality to convert schemas between OpenAPI versions 2 and 3
within the OpenAPIGenerator class. This change ensures compatibility
and consistency when converting specifications.

test: add tests for OpenAPI spec conversion functionality

Introduce comprehensive tests for the new convert command and schema
conversion logic. These tests cover various scenarios, including
version mismatches, invalid inputs, and progress updates, ensuring
robustness and reliability of the new feature.

chore: update dependencies and .gitignore for code coverage

Update dependencies in pyproject.toml to include pydantic, openapi-spec-validator,
and apispec for enhanced OpenAPI handling. Modify .gitignore to exclude
code coverage files, ensuring a cleaner repository.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ wheels/
 temp_generated/
 playground/
 .*-tracking.yaml
+*_cache
 
 # oas generator
 openapi-generator-cli-*.jar
+
+# codecov
+.codecov.yml
+.codecov
+.coverage
