feat: enhance project with OpenAPI linting and conversion capabilities
- Update project description and author information in pyproject.toml
- Add OpenAPI linting functionality to ensure spec compliance
- Introduce OpenAPI version conversion between 2.0 and 3.0
- Refactor code to separate concerns and improve maintainability
- Add comprehensive tests for new features and refactored components

These changes aim to improve the workflow for contract-based development by providing tools for validating and converting OpenAPI specifications, ensuring better code quality and flexibility in handling API contracts.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "qi"
 version = "0.1.0"
-description = "Smart OpenAPI Generator proxy for Java Spring Boot projects"
+description = "Qi - Better Workflow for Contract-Based Development"
 requires-python = ">=3.10"
 authors = [
-    {name = "QI Contributors", email = ""}
+    {name = "Nick Song", email = "nsong81@gmail.com"}
 ]
 dependencies = [
     "typer>=0.15.1",
