--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ Homepage = "https://github.com/nicksenap/qi"
 Repository = "https://github.com/nicksenap/qi"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -68,3 +68,6 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["PLR2004"]  # Ignore magic numbers in tests
+
+[tool.hatch.version]
+source = "vcs"
