--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ dependencies = [
     "typer>=0.15.1",
     "rich>=13.7.0",
     "pyyaml>=6.0.1",
-    "requests>=2.31.0",
     "pydantic>=2.0.0",
     "openapi-spec-validator>=0.7.1",
     "apispec>=6.3.0",
+    "httpx>=0.28.1",
 ]
 
 [project.urls]
