--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "openapi-spec-validator>=0.7.1",
     "apispec>=6.3.0",
     "httpx>=0.28.1",
+    "tree-sitter>=0.23.2",
+    "tree-sitter-java>=0.23.5",
 ]
 
 [project.urls]
