feat(pyproject.toml): enable automatic fixing of linting issues with ruff
chore(pyproject.toml): add per-file ignore for line length in test_file_processor.py

style(file_operations.py): adjust spacing for improved readability

feat(file_processor.py): integrate JavaParser for enhanced Java file processing

feat(file_processor.py): implement method extraction and merging logic

test(file_processor.py): add tests for Java file merging functionality

feat(java_parser.py): introduce JavaParser class for parsing and merging Java files

test(java_parser.py): add tests for JavaParser functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ test = [
 [tool.ruff]
 line-length = 120
 target-version = "py310"
+fix = true
 
 [tool.ruff.lint]
 select = [
@@ -70,6 +71,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["PLR2004"]  # Ignore magic numbers in tests
+"tests/test_file_processor.py" = ["E501"]
 
 [tool.hatch.version]
 source = "vcs"
